[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "influenza-genotyper"
version = "0.1.0"
description = "K-mer based genotyping and reassortment detection for influenza whole-genome sequences."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "TODO: your name", email = "todo@example.com" },
]
keywords = ["influenza", "genotyping", "reassortment", "minhash", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]

# Hard runtime dependencies. Lower bounds only — see the note in README about
# pinning exact versions for reproducible scientific runs. mmh3 is REQUIRED:
# it is the sole, pinned hash backend, and there is no fallback (a different
# backend would silently produce incomparable signatures).
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "mmh3>=4.0",
]

[project.optional-dependencies]
# Development / CI tooling.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Codes1985/isst"
Repository = "https://github.com/Codes1985/isst"

# ── Console entry point ──────────────────────────────────────────────────────
# The CLI lives inside the package at influenza_genotyper/cli.py, so the entry
# point resolves the same way the package itself does — no loose top-level
# module, no dependence on where a script sits in the repo.
[project.scripts]
run-genotyper = "influenza_genotyper.cli:main"

[tool.setuptools.packages.find]
include = ["influenza_genotyper*"]
exclude = ["tests*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Start lenient; tighten as the codebase settles.
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter, not enforced as errors
